welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value Direction
    setDirection(Direction.EST)
                 ^DwarfCode:8: error: not found: value Direction
    setDirection(Direction.OUEST)
                 ^DwarfCode:19: error: not found: value Direction
  if (getDirection==Direction.EST && estFaceMur) {
                    ^